<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.4.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <!--基本信息-->
    <groupId>com.zel</groupId>
    <artifactId>root</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging> <!--父项目打包方式配置为pom-->
    <name>root</name>
    <description>project for Spring Boot</description>

    <!-- 子模块 -->
    <modules>
        <module>common-utils</module>
        <module>dbmanager</module>
        <module>zel-mq</module>
        <module>zel-web</module>
        <module>zel-pojo</module>

    </modules>

    <!--定义属性值-->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
        <spring.boot.version>2.4.1</spring.boot.version>
        <lombok-version>1.18.16</lombok-version>
        <jackson-version>2.12.0</jackson-version>
        <elasticsearch.version>7.10.1</elasticsearch.version>
        <elasticsearch>7.10.1</elasticsearch>
    </properties>

    <!--依赖-->
    <dependencies>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>20.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.10</version>
        </dependency>

        <!--lombok start-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok-version}</version>
            <scope>provided</scope>
        </dependency>
        <!--lombok end-->

        <!--mybatis-plus-->
        <!--        <dependency>-->
        <!--            <groupId>com.baomidou</groupId>-->
        <!--            <artifactId>mybatis-plus</artifactId>-->
        <!--            <version>3.4.1</version>-->
        <!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>mysql</groupId>-->
<!--            <artifactId>mysql-connector-java</artifactId>-->
<!--            <version>8.0.21</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.baomidou</groupId>-->
<!--            <artifactId>mybatis-plus-boot-starter</artifactId>-->
<!--            <version>3.4.0</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.mybatis.spring.boot</groupId>-->
<!--            <artifactId>mybatis-spring-boot-starter</artifactId>-->
<!--            <version>2.1.4</version>-->
<!--        </dependency>-->
        <!--end mybatis-plus-->

    </dependencies>

    <!-- 依赖声明 -->
    <!-- 统一依赖构件版本， 本身不下载依赖 -->
    <dependencyManagement>
        <dependencies>
            <!--本项目模块的依赖 -->
            <dependency>
                <groupId>com.zel</groupId>
                <artifactId>common-utils</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.zel</groupId>
                <artifactId>pojo</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zel</groupId>
                <artifactId>dbmanager</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zel</groupId>
                <artifactId>zel-mq</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zel</groupId>
                <artifactId>web</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!--本项目模块的依赖 end-->

            <!--rabbitmq-->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-amqp</artifactId>
                <version>2.4.1</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring.boot.version}</version>
                <scope>test</scope>
            </dependency>


            <!--mybatis-plus-->
            <!--        <dependency>-->
            <!--            <groupId>com.baomidou</groupId>-->
            <!--            <artifactId>mybatis-plus</artifactId>-->
            <!--            <version>3.4.1</version>-->
            <!--        </dependency>-->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>8.0.21</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>3.4.0</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>2.1.4</version>
            </dependency>
            <!--end mybatis-plus-->
        </dependencies>


    </dependencyManagement>

    <!--编译管理 jdk版本和字符集编码-->
    <build>
        <!--finalName: 在Build下重新指定最终打包报名, 如果这里不指定，则默认包名为：artifactId-version.jar-->
        <!--<finalName>The-Test-Pro</finalName>-->
        <plugins>
            <plugin>
                <!--maven-compiler-plugin 代码编译，配置包 将/lib下的包打包进来-->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <skipTests>true</skipTests>    <!--默认关掉单元测试 -->
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>
